@@ -1,6 +1,7 @@
 language: python
 
 before_install:
+  sudo add-apt-repository -y ppa:cassou/emacs &&
   sudo apt-get update -qq &&
   sudo apt-get install ipython3 &&
   sudo apt-get install ipython2.7 &&
